@@ -15,6 +15,10 @@
 
 -------------------------------------------------------------------------------
 
+	* Drop support for systems that reverse setvbuf arguments. The last
+	  systems to do that are reported to be shipped in 1987 by the autoconf
+	  manual, so ditch them.
+
 1.1.7	2008-05-04 (released)
 
 	2008-04-30
